fixed kafka issues
