# pkg/routes/admin.go
@@ -7,9 +7,12 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func AdminRoutes(engine *gin.RouterGroup, adminHandler *handler.AdminHandler, categoryHandler *handler.CategoryHandler) {
+func AdminRoutes(engine *gin.RouterGroup, adminHandler *handler.AdminHandler, categoryHandler *handler.CategoryHandler, videoHandler *handler.VideoHandler) {
 	engine.POST("/adminlogin", adminHandler.LoginHandler)
 	engine.Use(middleware.AdminAuthMiddleware)
+	engine.POST("/addtags", videoHandler.AddTagsHandler)
+	engine.DELETE("/deletetags", videoHandler.DeleteTagHandler)
+	engine.GET("/tags", videoHandler.GetTagsHandler)
 	engine.GET("/reports", adminHandler.GetReports)
 	{
 		usermanagement := engine.Group("/users")
